--- a/scripts/comparator/grafana/dashboard.tmpl
+++ b/scripts/comparator/grafana/dashboard.tmpl
@@ -1,4 +1,24 @@
-
+{
+  "annotations": {
+    "list": [
+      {
+        "builtIn": 1,
+        "datasource": "-- Grafana --",
+        "enable": true,
+        "hide": true,
+        "iconColor": "rgba(0, 211, 255, 1)",
+        "name": "Annotations & Alerts",
+        "type": "dashboard"
+      }
+    ]
+  },
+  "editable": true,
+  "gnetId": null,
+  "graphTooltip": 0,
+  "id": 1,
+  "links": [],
+  "panels": [
+  {{- range .Queries }}
     {
       "aliasColors": {},
       "bars": false,
@@ -13,7 +33,7 @@
         "x": 0,
         "y": 0
       },
-      "id": ${ID},
+      "id": {{.Idx}},
       "legend": {
         "avg": false,
         "current": false,
@@ -40,17 +60,17 @@
       "targets": [
         {
           "datasource": "M3Query",
-          "expr": "${QUERY}",
+          "expr": "{{.Query}}",
           "hide": false,
-          "interval": "${INTERVAL}",
+          "interval": "{{.Interval}}",
           "legendFormat": "m3",
           "refId": "A"
         },
         {
           "datasource": "Prometheus",
-          "expr": "${QUERY}",
+          "expr": "{{.Query}}",
           "hide": false,
-          "interval": "${INTERVAL}",
+          "interval": "{{.Interval}}",
           "legendFormat": "prom",
           "refId": "B"
         }
@@ -59,7 +79,7 @@
       "timeFrom": null,
       "timeRegions": [],
       "timeShift": null,
-      "title": "${QUERY} : ${INTERVAL}",
+      "title": "{{.Query}} : {{.Interval}}",
       "tooltip": {
         "shared": true,
         "sort": 0,
@@ -95,4 +115,36 @@
         "align": false,
         "alignLevel": null
       }
-    } 
+    }{{if .Next}},{{end}}
+  {{- end}}
+    ],
+  "refresh": false,
+  "schemaVersion": 20,
+  "style": "dark",
+  "tags": ["queries"],
+  "templating": {
+    "list": []
+  },
+  "time": {
+    "from": "{{.Start}}",
+    "to": "{{.End}}"
+  },
+  "timepicker": {
+    "refresh_intervals": [
+      "5s",
+      "10s",
+      "30s",
+      "1m",
+      "5m",
+      "15m",
+      "30m",
+      "1h",
+      "2h",
+      "1d"
+    ]
+  },
+  "timezone": "",
+  "title": "Dashboard {{.Revision}}",
+  "uid": "{{.Revision}}",
+  "version": 1
+}
