Squashed 'docs/themes/docs-theme/' changes from 4dba9dd2e..d84a9b2e3
d84a9b2e3 Change glossary path

git-subtree-dir: docs/themes/docs-theme
git-subtree-split: d84a9b2e3d94bc46382e79bb7b14775f5f9d29ff

--- a/layouts/shortcodes/glossary_tooltip.html
+++ b/layouts/shortcodes/glossary_tooltip.html
@@ -7,7 +7,7 @@
 {{- else -}}
 {{- $term_info := $glossary_items.GetMatch (printf "%s.md" $id ) -}}
 {{- if not $term_info -}}
-{{- errorf "[%s] %q: %q is not a valid glossary term_id, see ./reference/glossary/* for a full list" site.Language.Lang .Page.Path $id -}}
+{{- errorf "[%s] %q: %q is not a valid glossary term_id, see ./glossary/* for a full list" site.Language.Lang .Page.Path $id -}}
 {{- end }}
 {{- with $term_info -}}
 {{- $text := $text | default $term_info.Title -}}
