Squashed 'docs/themes/docs-theme/' changes from d84a9b2e3..7ac79e398
7ac79e398 Change glossary path
REVERT: d84a9b2e3 Change glossary path

git-subtree-dir: docs/themes/docs-theme
git-subtree-split: 7ac79e398305a2dbdbd88b3cd36e3b4c31e7483a

--- a/layouts/partials/docs/glossary-terms.html
+++ b/layouts/partials/docs/glossary-terms.html
@@ -1,4 +1,4 @@
-{{ $glossaryBundle := site.GetPage "page" "glossary" }}
+{{ $glossaryBundle := site.GetPage "page" "docs/glossary" }}
 {{- if $glossaryBundle -}}
   {{ $pages := $glossaryBundle.Resources.ByType "page" }}
   {{- range site.Params.language_alternatives -}}
