Squashed 'docs/themes/docs-theme/' changes from 7ac79e398..06ca4188b
06ca4188b Change glossary path
REVERT: 7ac79e398 Change glossary path

git-subtree-dir: docs/themes/docs-theme
git-subtree-split: 06ca4188b1b040ce0f6334c50aeaecf8352c789f

--- a/layouts/glossary.html
+++ b/layouts/glossary.html
@@ -26,7 +26,7 @@
 	<span class="tag-option"><a id="deselect-all-tags" href="javascript:void(0)">{{ T "layouts_docs_glossary_deselect_all" }}</a></span>
 </div>
 <p>{{ T "layouts_docs_glossary_click_details_before" }} <a href="javascript:void(0)" class="no-underline">[+]</a> {{ T "layouts_docs_glossary_click_details_after" }}</p>
-{{ partial "docs/glossary-terms.html" . }}
+{{ partial "glossary-terms.html" . }}
 {{ $glossary_items := $.Scratch.Get "glossary_items" }}
 {{ with $glossary_items }}
 {{ $glossary_terms := sort . "Title" "asc" }}
