--- a/layouts/partials/docs/glossary-terms.html
+++ b/layouts/partials/docs/glossary-terms.html
@@ -1,4 +1,4 @@
-{{ $glossaryBundle := site.GetPage "page" "docs/glossary" }}
+{{ $glossaryBundle := site.GetPage "page" "glossary" }}
 {{- if $glossaryBundle -}}
   {{ $pages := $glossaryBundle.Resources.ByType "page" }}
   {{- range site.Params.language_alternatives -}}
@@ -9,5 +9,5 @@
   {{ end }}
   {{- $.Scratch.Set "glossary_items"  $pages -}}
 {{- else -}}
-{{- errorf "[%s] Glossary Bundle not found for language. Create at least an index.md file inside docs/glossary" site.Language.Lang -}}
+{{- errorf "[%s] Glossary Bundle not found for language. Create at least an index.md file inside glossary" site.Language.Lang -}}
 {{- end -}}
