Squashed 'docs/themes/docs-theme/' changes from 06ca4188b..dcbf4649b
dcbf4649b Change glossary path
REVERT: 06ca4188b Change glossary path

git-subtree-dir: docs/themes/docs-theme
git-subtree-split: dcbf4649bbaa43fc21c12cbdb936999d4b6719d8

--- a/layouts/shortcodes/glossary_tooltip.html
+++ b/layouts/shortcodes/glossary_tooltip.html
@@ -1,6 +1,6 @@
 {{- $id := .Get "term_id" -}}
 {{- $text := .Get "text" -}}
-{{- partial "glossary-terms.html" $.Page -}}
+{{- partial "docs/glossary-terms.html" $.Page -}}
 {{- $glossary_items := $.Page.Scratch.Get "glossary_items" -}}
 {{- if not $glossary_items -}}
 {{- errorf "[%s] No glossary items found" site.Language.Lang -}}
